--- a/app/core/views/core.ejs
+++ b/app/core/views/core.ejs
@@ -1,6 +1,6 @@
 <ul class="nav nav-tabs">
     <% for (var i = 0, len = tabs.length; i < len; i++) { %>
-        <li data-pane="<% tabs[i].name %>" class="<% tabs[i].name %><% if (tabs[i].active) { %> active<% } %>"><a href="#"><%= tabs[i].name %></a></li>
+        <li data-pane="<%= tabs[i].name %>" class="<% tabs[i].name %><% if (tabs[i].active) { %> active<% } %>"><a href="#"><%= tabs[i].name %></a></li>
     <% } %>
 </ul>
 
