#SW Added controllers to the different panes and added model list helper method

--- a/app/public/core.css
+++ b/app/public/core.css
@@ -3,14 +3,29 @@ body {
     width: 700px;
 }
 
+body > div {
+    position: relative;
+    min-height: 300px;
+}
+
+.nav-tabs {
+    text-transform: capitalize;
+}
+
 .pane-container {
     position:absolute;
     top: 43px;
     right: 0;
     bottom: 0;
     left: 0;
+    margin: 0;
+    padding: 10px;
 }
 
-.nav-tabs {
-    text-transform: capitalize;
+.pane-container > li {
+    position:absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
