Added options to the deployment pane

--- a/app/core/views/deployment.ejs
+++ b/app/core/views/deployment.ejs
@@ -1,6 +1,2 @@
-<ul>
-    <li>
-        <button class="btn btn-primary btn-xs">Uk Primary</button>
-        <input disabled="disabled" type="text" />
-    </li>
-</ul>
+<div class="deployments"></div>
+<div class="options"></div>
