Made the active tab have a higher z-index

--- a/app/public/core.css
+++ b/app/public/core.css
@@ -30,6 +30,10 @@ body > div {
     padding: 10px;
 }
 
+.pane-container > li.in {
+    z-index: 2;
+}
+
 li.deployment span.control-label {
     padding-top: 3px;
 }
