#SW Started the setup pane

--- a/app/core/views/setup.ejs
+++ b/app/core/views/setup.ejs
@@ -1,5 +1,13 @@
 <div class="active">
-    <input type="text" disabled="disabled" />
+    <div class="input-group">
+        <input type="text" class="form-control" disabled="disabled">
+        <div class="input-group-btn">
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Choose another <span class="caret"></span></button>
+            <ul class="dropdown-menu pull-right">
+                <li><a href="#">Action</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 <div class="add-urls"></div>
