--- a/app/core/views/setup.ejs
+++ b/app/core/views/setup.ejs
@@ -1,13 +1,16 @@
-<div class="active">
-    <div class="input-group">
-        <input type="text" class="form-control" disabled="disabled">
-        <div class="input-group-btn">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Choose another <span class="caret"></span></button>
-            <ul class="dropdown-menu pull-right">
-                <li><a href="#">Action</a></li>
-            </ul>
-        </div>
-    </div>
+<div class="list-group">
+    <a href="#" class="list-group-item active">Cras justo odio <span class="close">&times;</span></a>
+    <a href="#" class="list-group-item">Dapibus ac facilisis in <span class="close">&times;</span></a>
+    <a href="#" class="list-group-item">Morbi leo risus <span class="close">&times;</span></a>
+    <a href="#" class="list-group-item">Porta ac consectetur ac <span class="close">&times;</span></a>
+    <a href="#" class="list-group-item">Vestibulum at eros <span class="close">&times;</span></a>
 </div>
 
-<div class="add-urls"></div>
+<div class="form-group add">
+    <div class="col-lg-10">
+        <input type="text" class="form-control" />
+    </div>
+    <span class="col-lg-2 control-label">
+        <button class="btn btn-primary">Add</button>
+    </span>
+</div>
