--- a/app/core/views/deployment_deployments.ejs
+++ b/app/core/views/deployment_deployments.ejs
@@ -2,7 +2,7 @@
     <% for (var i = 0; i < deployments.length; i++) { %>
         <div class="form-group">
             <div class="col-lg-9">
-                <input class="form-control" disabled="disabled" type="text" value="<%= deployments[i].getUrl() %>" />
+                <input class="form-control" disabled="disabled" type="text" value="<%= deployments[i].getUrl('upgrade') %>" />
             </div>
             <span class="col-lg-3 control-label">
                 <button class="btn btn-primary btn-sm"><%= deployments[i].deploymentName %></button>
