--- a/app/core/views/setup.ejs
+++ b/app/core/views/setup.ejs
@@ -1,9 +1,10 @@
 <div class="list-group">
-    <a href="#" class="list-group-item active">Cras justo odio <span class="close">&times;</span></a>
-    <a href="#" class="list-group-item">Dapibus ac facilisis in <span class="close">&times;</span></a>
-    <a href="#" class="list-group-item">Morbi leo risus <span class="close">&times;</span></a>
-    <a href="#" class="list-group-item">Porta ac consectetur ac <span class="close">&times;</span></a>
-    <a href="#" class="list-group-item">Vestibulum at eros <span class="close">&times;</span></a>
+    <% urls.each(function(url) { %>
+        <a <%= (el) -> el.data( 'model', url ) %> href="#" class="list-group-item<% if (url.attr('active')) { %> active<%} %>">
+            <%= url.attr('link') %>
+            <span class="close">&times;</span>
+        </a>
+    <% }) %>
 </div>
 
 <div class="form-group add">
