--- a/app/core/views/deployment_deployments.ejs
+++ b/app/core/views/deployment_deployments.ejs
@@ -1,11 +1,9 @@
 <form class="form-horizontal" role="form">
     <% for (var i = 0; i < deployments.length; i++) { %>
-        <div class="form-group">
-            <div class="col-lg-9">
-                <input class="form-control" disabled="disabled" type="text" value="<%= deployments[i].getUrl('upgrade') %>" />
-            </div>
-            <span class="col-lg-3 control-label">
-                <button class="btn btn-primary btn-sm"><%= deployments[i].deploymentName %></button>
+        <div class="input-group deployment">
+            <input class="form-control" disabled="disabled" type="text" value="<%= deployments[i].getUrl('upgrade') %>" />
+            <span class="input-group-btn">
+                <button class="btn btn-primary"><%= deployments[i].deploymentName %></button>
             </span>
         </div>
     <% } %>
