--- a/app/core/views/setup.ejs
+++ b/app/core/views/setup.ejs
@@ -7,11 +7,9 @@
     <% }) %>
 </div>
 
-<div class="form-group add">
-    <div class="col-lg-10">
-        <input type="text" class="form-control" />
-    </div>
-    <span class="col-lg-2 control-label">
+<div class="input-group add">
+    <input type="text" class="form-control" />
+    <span class="input-group-btn">
         <button class="btn btn-primary">Add</button>
     </span>
 </div>
